Fixed card spacing and position

--- a/RestaurantWebApp/src/app/customer-interface/customer-interface.component.sass
+++ b/RestaurantWebApp/src/app/customer-interface/customer-interface.component.sass
@@ -39,6 +39,7 @@ body
   font-family: 'Calibri Light'
   height: 100%
   width: 100%
+  padding: 10px
 
 .menuTitle
   font-family: 'Cedarville Cursive', cursive
@@ -124,6 +125,11 @@ body
   //background: rgb(253,253,243)
   //background: radial-gradient(circle, rgba(253,253,243,1) 0%, rgb(236, 232, 225) 100%)
   min-height: 100vh
+  padding-bottom: 20px
+
+.card
+  padding: 15px
+  margin: 20px
 
 .menuCard .innerBorder
   border-radius: 10px
@@ -131,8 +137,9 @@ body
 
 .categoryTitle
   font-size: 5vw
-  font-family: 'Cedarville Cursive', cursive
+  font-family: 'Reenie Beanie', cursive
   color: $gold-light
+  text-shadow: 2px 2px 2px #302f2f
 
 .helpBubble
   position: absolute
@@ -153,4 +160,5 @@ body
 
 .expansionPannel
   padding: 20px
+  width: 100%
 
